fix: DrawerComponent Alignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,8 @@
   height: 0;
 }
 
+
+
 :root {
   --background: oklch(0.9900 0 0);
   --foreground: oklch(0 0 0);
@@ -202,8 +204,17 @@ body {
   * {
     @apply border-border outline-ring/50;
   }
+  html,
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overflow-auto;
     letter-spacing: var(--tracking-normal);
+
+    -ms-overflow-style: none;     
+    scrollbar-width: none;  
   }
+  html::-webkit-scrollbar,
+  body::-webkit-scrollbar {
+    display: none;                
+  }
+  
 }
